# factory

./: .cspell.json  .gitignore  .markdownlintignore  .prettierignore  .vale.ini  AGENTS.md  README.md  community-builds.md  cspell.config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.factory/: policy.json  settings.json
.husky/: pre-commit
changelog/: 1-2.mdx  1-3.mdx  1-5.mdx
docs/: docs.json  enterprise.mdx  factory-docs-map.mdx  factory_docs_map.mdx  (+7 more)
examples/jeval-memory-compression/: README.md  generate_slides.py  jeval.pptx  pyproject.toml
examples/jeval-memory-compression/.factory/hooks/: precompact_jeval.py  score_artifacts.py
examples/jeval-memory-compression/eval/: train.py
examples/jeval-memory-compression/examples/jeval-memory-compression/jeval/compression/: adaptive.py
examples/jeval-memory-compression/examples/jeval-memory-compression/jeval/strata/: __init__.py
examples/jeval-memory-compression/jeval/: __init__.py
examples/jeval-memory-compression/jeval/compression/: __init__.py  adaptive.py
examples/jeval-memory-compression/jeval/encoders/: __init__.py  base.py  predictor_head.py  sentence_encoder.py
examples/jeval-memory-compression/jeval/epe/: __init__.py  core.py  decomposer.py  weights.py
examples/jeval-memory-compression/jeval/strata/: __init__.py  budget.py  classifier.py
examples/jeval-memory-compression/jeval_memory_compression.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/jeval-memory-compression/test_data/: real_session.md  real_session_compressed.md  scores.json
(+501 files in other folders)
